# aurora-engine

./: Cargo.toml  sputnikvm
doc/: profiling.md
engine/: Cargo.toml
engine-precompiles/: Cargo.toml
engine-precompiles/src/: bn128.rs  lib.rs  native.rs  near.rs
engine-sdk/src/: lib.rs  near_runtime.rs
engine-standalone-storage/: Cargo.toml
engine-standalone-storage/src/: engine_state.rs
engine-standalone-storage/src/relayer_db/: mod.rs
engine-standalone-storage/src/sync/: mod.rs  types.rs
engine-standalone-tracing/: Cargo.toml
engine-standalone-tracing/src/types/: call_tracer.rs
engine-tests/: Cargo.toml
engine-tests/src/test_utils/: exit_precompile.rs  mocked_external.rs  mod.rs
engine-tests/src/test_utils/standalone/: mod.rs
engine-tests/src/tests/: erc20.rs  erc20_connector.rs  one_inch.rs  repro.rs  sanity.rs  state_migration.rs  uniswap.rs
engine-tests/src/tests/res/: DappletRegistry.json  aurora_state_8ENw3wu.json  input_8ENw3wu.hex
engine-tests/src/tests/standalone/: call_tracer.rs  json_snapshot.rs
engine-transactions/: Cargo.toml
engine-types/: Cargo.toml
engine-types/src/: lib.rs  parameters.rs  storage.rs
engine/src/: engine.rs  lib.rs  parameters.rs  xcc.rs
etc/eth-contracts/contracts/: EvmErc20.sol
etc/eth-contracts/contracts/test/: Tester.sol
etc/uniswap/: package.json
etc/xcc-router/src/: lib.rs
src/: admin_controlled.rs  connector.rs  engine.rs  lib.rs  sdk.rs  state.rs  types.rs
src/benches/: mod.rs  uniswap.rs
src/sdk/: external.rs  mod.rs
src/test_utils/: erc20.rs  mod.rs  solidity.rs  standard_precompiles.rs  uniswap.rs
src/tests/: erc20.rs  mod.rs  sanity.rs  standard_precompiles.rs  state_migration.rs  test_block_hash.rs  uniswap.rs
tests/: test_block_hash.rs  test_state_migration.rs
