[package]
name = "aurora-engine-tests"
version = "1.0.0"
authors = ["NEAR <hello@near.org>"]
edition = "2018"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "GPL-3.0"
publish = false
autobenches = false

[dependencies]
aurora-engine = { path = "../engine", default-features = false, features=["sha2"] }
aurora-engine-types = { path = "../engine-types", default-features = false }
aurora-engine-sdk = { path = "../engine-sdk", default-features = false }
borsh = { version = "0.8.2", default-features = false }
byte-slice-cast = { version = "1.0", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
evm = { path = "/home/birchmd/upstream/aurora-is-near/sputnikvm", default-features = false }
rlp = { version = "0.5.0", default-features = false }

[dev-dependencies]
bstr = "0.2"
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4.3", default-features = false }
near-sdk = { git = "https://github.com/aurora-is-near/near-sdk-rs.git", rev = "d802581815546bc4edbc03fe2831d59bd4688a0e" }
near-sdk-sim = { git = "https://github.com/aurora-is-near/near-sdk-rs.git", rev = "d802581815546bc4edbc03fe2831d59bd4688a0e" }
near-crypto = { git = "https://github.com/birchmd/nearcore.git", rev = "b43863cfdd9c7e072625e8cad15435c181241f7e" }
near-vm-runner = { git = "https://github.com/birchmd/nearcore.git", rev = "b43863cfdd9c7e072625e8cad15435c181241f7e" }
near-vm-logic = { git = "https://github.com/birchmd/nearcore.git", rev = "b43863cfdd9c7e072625e8cad15435c181241f7e" }
near-primitives-core = { git = "https://github.com/birchmd/nearcore.git", rev = "b43863cfdd9c7e072625e8cad15435c181241f7e" }
near-primitives = { git = "https://github.com/birchmd/nearcore.git", rev = "b43863cfdd9c7e072625e8cad15435c181241f7e" }
wasmer-runtime-core = { version = "0.18.2", package = "wasmer-runtime-core-near" }
libsecp256k1 = "0.3.5"
rand = "0.7.3"
criterion = "0.3.4"
git2 = "0.13"

[features]
meta-call = ["aurora-engine/meta-call"]
mainnet-test = ["aurora-engine/mainnet-test"]
testnet-test = ["aurora-engine/testnet-test"]
betanet-test = ["aurora-engine/betanet-test"]
